Bug 36976 - FAIL: g++.dg/torture/stackalign/unwind-2.C
Summary: FAIL: g++.dg/torture/stackalign/unwind-2.C
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: debug (show other bugs)
Version: 4.4.0
: P3 normal
Target Milestone: ---
Assignee: Not yet assigned to anyone
URL: http://gcc.gnu.org/ml/gcc-patches/200...
Keywords:
Depends on:
Blocks:
 
Reported: 2008-07-30 20:52 UTC by H.J. Lu
Modified: 2008-07-31 15:35 UTC (History)
3 users (show)

See Also:
Host:
Target: i686-pc-linux-gnu
Build:
Known to work:
Known to fail:
Last reconfirmed:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description H.J. Lu 2008-07-30 20:52:24 UTC
Some newly added stack alignment tests failed on Linux/ia32:

FAIL: g++.dg/torture/stackalign/unwind-2.C  -O1  execution test
FAIL: g++.dg/torture/stackalign/unwind-2.C  -O2  execution test
FAIL: g++.dg/torture/stackalign/unwind-2.C  -O3 -fomit-frame-pointer  execution test
FAIL: g++.dg/torture/stackalign/unwind-2.C  -O3 -g  execution test

The discussions are at

http://gcc.gnu.org/ml/gcc-patches/2008-07/msg02133.html

The patch is posted at

http://gcc.gnu.org/ml/gcc-patches/2008-07/msg02221.html
Comment 1 hjl@gcc.gnu.org 2008-07-31 14:35:08 UTC
Subject: Bug 36976

Author: hjl
Date: Thu Jul 31 14:33:43 2008
New Revision: 138416

URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=138416
Log:
2008-07-31  H.J. Lu  <hongjiu.lu@intel.com>

	PR debug/36976
	* dwarf2out.c (dwarf2out_args_size_adjust): New.
	(dwarf2out_stack_adjust): Use it.
	(dwarf2out_frame_debug_expr): Likewise.

Modified:
    trunk/gcc/ChangeLog
    trunk/gcc/dwarf2out.c

Comment 2 H.J. Lu 2008-07-31 15:35:56 UTC
Fixed.