2008-07-31  H.J. Lu  <hongjiu.lu@intel.com>

PR debug/36976
	* dwarf2out.c (dwarf2out_args_size_adjust): New.
	(dwarf2out_stack_adjust): Use it.
	(dwarf2out_frame_debug_expr): Likewise.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@138416 138bc75d-0d04-0410-961f-82ee72b054a4